--- a/#1 resume-page/style.css
+++ b/#1 resume-page/style.css
@@ -13,47 +13,59 @@ p {
 }
 
 main {
-    padding: 20px 10%; /* 패딩 */
-    background-color: #fff; /* 배경 색상 */
-    color: #333; /* 텍스트 색상 */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    background-color: #fff;
+    color: #333;
 }
 
 section {
-    margin-bottom: 20px; /* 각 섹션 하단 여백 */
+    width: 80%;
+    max-width: 960px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #f9f9f9;
 }
 
 section h2 {
-    background-color: #333; /* 제목 배경 색상 */
-    color: #fff; /* 제목 텍스트 색상 */
-    padding: 10px; /* 패딩 */
-    margin: 0 0 10px; /* 마진 */
+    color: #fff;
+    background-color: #333;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px 5px 0 0;
 }
 
 ul {
-    list-style-type: none; /* 리스트 스타일 제거 */
-    padding: 0; /* 패딩 제거 */
+    list-style-type: none;
+    padding: 0;
 }
 
 li {
-    margin-bottom: 5px; /* 리스트 아이템 간 여백 */
+    margin-bottom: 10px;
+    line-height: 1.5;
 }
 
 li ul {
-    padding-left: 20px; /* 내부 리스트 패딩 */
+    padding-left: 20px;
 }
 
+
 #portfolio li {
-    background-color: #e8f0fe; /* 배경 색상: 연한 파랑 */
-    padding: 10px; /* 패딩 */
-    margin-bottom: 10px; /* 아래쪽 마진 */
-    border-radius: 5px; /* 테두리 둥글게 */
+    background-color: #e8f0fe;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
 
 #portfolio a {
-    color: #0066cc; /* 링크 색상: 진한 파랑 */
-    text-decoration: none; /* 밑줄 없애기 */
+    color: #0066cc;
+    text-decoration: none;
 }
 
 #portfolio a:hover {
-    text-decoration: underline; /* 호버 시 밑줄 */
+    text-decoration: underline;
 }
