[resuem-page] Feat: css	반응형 디자인 추가

--- a/#1 resume-page/style.css
+++ b/#1 resume-page/style.css
@@ -69,3 +69,14 @@ li ul {
 #portfolio a:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 768px) {
+    main {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    section {
+        width: 100%;
+    }
+}
