--- a/#1 resume-page/style.css
+++ b/#1 resume-page/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: beige;
+    background-color: gainsboro;
     font-family: 'Noto Sans KR', sans-serif;
 }
 
@@ -34,7 +34,7 @@ section {
 
 section h2 {
     color: #fff;
-    background-color: #333;
+    background-color: gray;
     padding: 10px;
     width: 100%;
     border-radius: 5px 5px 0 0;
